Finish changes